<resources>
    <string name="app_name">Store</string>

    <!-- Label for overflow menu option that inserts product's data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product's data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="add_product_name">Add product</string>

    <!-- Label for editor menu option to save a product  [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for overview section in the editor [CHAR LIMIT=30] -->
    <string name="section_overview">Overview</string>

    <!-- Label for supplier section in the editor [CHAR LIMIT=30] -->
    <string name="section_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier_phone_number">Supplier Phone Number</string>
    <string name="store">Store</string>


</resources>
