<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        style="@style/EditorLinearLayoutH">

        <!-- Label -->
        <TextView
            style="@style/SectionStyle"
            android:text="@string/section_overview" />

        <!-- Input fields -->
        <LinearLayout
            style="@style/EditorLinearLayout">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />


            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier -->
    <LinearLayout
        android:id="@+id/container_supplier"
        style="@style/EditorLinearLayoutH">

        <!-- Label -->
        <TextView
            style="@style/SectionStyle"
            android:text="@string/section_supplier" />

        <!-- Input field -->
        <LinearLayout
            style="@style/EditorLinearLayout">

            <!-- Supplier name field -->
            <EditText
                android:id="@+id/edit_product_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords" />

            <!-- Supplier phone number field -->
            <EditText
                android:id="@+id/edit_product_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_phone_number"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

